# ml-scratch

./: pyproject.toml
deep_learning/: activation_functions.py
examples/: linear_regression.py  logistic_regression.py
supervised/:  __init__.py  k_nearest_neighbors.py  logistic_regresiion.py  regression.py
utils/: data_manipulation.py  data_operation.py  misc.py
